# PaddleOCR2RKNN

./: README.md  convert_to_rknn.sh  onnx_transfer.py  paddle_ocr_rknn.py  paddle_ocr_test.py  paddleocr_onnx_test.py  precompile_rknn.py  requirements.txt  rknn_convert.py
det_time/: dataset.txt  det_sim.onnx  det_time_in0.npy  det_time_sim.onnx  model_config.yml
models/: det.onnx  det_test.onnx
ocr_demo/: CMakeLists.txt  README.md  build.sh  pull_results.sh  run_rv1109_rv1126.sh
ocr_demo/include/: clipper.cpp  clipper.h  ocr_det.h  ocr_rec.h  postprocess_op.h  preprocess_op.h  utility.h
ocr_demo/install/ocr_demo/: run_rv1109_rv1126.sh
ocr_demo/install/ocr_demo/rknn_weights/: det_hw.rknn
ocr_demo/results/: output_0.txt  python_det_out_0.txt  python_rec_out_0.txt
ocr_demo/rknn_weights/: det_hw.rknn
ocr_demo/src/: main.cpp  ocr_det.cpp  ocr_rec.cpp  postprocess_op.cpp  preprocess_op.cpp  utility.cpp
rec_time/: dataset.txt  model_config.yml  rec_time_in0.npy
rknn_weights/: det_time_sim.rknn
